<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>KinectManagerClass</class>
 <widget class="QMainWindow" name="KinectManagerClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1304</width>
    <height>551</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>KinectManager</string>
  </property>
  <widget class="QWidget" name="centralWidget"/>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1304</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionRun"/>
    <addaction name="action_Screen_shot"/>
   </widget>
   <widget class="QMenu" name="menuMode">
    <property name="title">
     <string>Mode</string>
    </property>
    <addaction name="actionColor_Over"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuMode"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionRun">
   <property name="text">
    <string>Run</string>
   </property>
  </action>
  <action name="action_Screen_shot">
   <property name="text">
    <string> Screen shot</string>
   </property>
  </action>
  <action name="actionColor_Over">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Color Over</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="kinectmanager.qrc"/>
 </resources>
 <connections/>
</ui>
